--- a/css/small.css
+++ b/css/small.css
@@ -458,6 +458,40 @@
 	}
 
 	.scroll{
-		max-width: 408px;
+		max-width: 405px;
+		margin-left: -25px;
+		margin-right: -5px;
+	}
+
+	.scroll-box{
+		position: relative;
+		margin: 0 auto;
+		margin-left: 75px;
+	}
+
+	.ong{
+		left: 0;
+		margin-top: 25%;
+	}
+
+	.chap{
+		right: 0;
+		margin-top: 25%;
+	}
+
+	.scroll-button{
+		position: absolute;
+	}
+
+	.info-subtext{
+		width: 350px;
+	}
+
+	.about-us-title{
+		margin-left: 50px !important
+	}
+
+	.about-us-img{
+		margin-left: -50px !important
 	}
 }
