--- a/css/style.css
+++ b/css/style.css
@@ -1267,6 +1267,11 @@ button{
     .instagram-wrapper{
         margin-left: -40px;
     }
+
+    .map-img{
+        width: 100%;
+        height: 100%;
+    }
 }
 
 @media(max-width: 600px){
